--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
 RSS: false
 #weibo_username:     Weibo
 #zhihu_username:     Zhihu
-github_username:    vove7
+github_username:    Vove7
 #twitter_username:  huxpro
 #facebook_username:  ...
 
