--- a/_config.yml
+++ b/_config.yml
@@ -14,8 +14,8 @@ baseurl: ""         # for example, '/blog' if your blog hosted on 'host/blog'
 RSS: false
 #weibo_username:     Weibo
 #zhihu_username:     Zhihu
-github_username:    Vove7
-#twitter_username:  huxpro
+github_username: Vove7
+twitter_username: Vove_7
 #facebook_username:  ...
 
 
